<resources>
    <string name="app_name">Weather App</string>
    <string name="designed_and_developed_by">Designed and Developed by:</string>
    <string name="developer_name_1">Kidist Birhanu</string>
    <string name="developer_name_2">Bereket Tolcha</string>
    <string name="star_banner">Star Banner</string>
    <string name="text_show_forecast">Show Forecast</string>
    <string name="text_alert">Alert:</string>
    <string name="text_humidity">Humidity:</string>
    <string name="text_condition">Condition:</string>
    <string name="text_day_night">Day/Night:</string>
    <string name="text_feels_like_f">Feels Like (F):</string>
    <string name="text_feels_like_c">Feels Like (C):</string>
    <string name="text_temperature_f">Temperature (F):</string>
    <string name="text_temperature_c">Temperature (C):</string>
    <string name="text_show_today">Show Today</string>
    <string name="text_your_are_in">You are in:</string>
    <string name="text_moonset">Moonset:</string>
    <string name="text_moonrise">Moonrise:</string>
    <string name="text_sunset">Sunset:</string>
    <string name="text_sunrise">Sunrise:</string>
    <string name="text_date">Date:</string>
    <string name="text_location_not_found_message">Unable to get Location information, Please try closing and opening the app.</string>
</resources>
