<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvwForecastDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/text_date"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvwTemperatureC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_temperature_c"
            android:textColor="#000000"
            android:layout_weight="1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvwTemperatureF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_temperature_f"
            android:textColor="#000000"
            android:layout_weight="1"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvwFeelsLikeC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_feels_like_c"
            android:textColor="#000000"
            android:layout_weight="1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvwFeelsLikeF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_feels_like_f"
            android:textColor="#000000"
            android:layout_weight="1"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvwSunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sunrise"
            android:textColor="#000000"
            android:layout_weight="1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvwSunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sunset"
            android:textColor="#000000"
            android:layout_weight="1"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvwMoonrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_moonrise"
            android:textColor="#000000"
            android:layout_weight="1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvwMoonset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_moonset"
            android:textColor="#000000"
            android:layout_weight="1"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvwAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_alert"
        android:textColor="#000000"
        android:layout_weight="1"
        android:paddingBottom="10dp"
        android:textSize="16sp" />
</LinearLayout>
